--- a/configure.in
+++ b/configure.in
@@ -215,26 +215,24 @@ else
 fi
 AC_MSG_RESULT($needkocodecs)
 
-# Make sure distutils is available.  Some Linux Python packages split
-# distutils into the "-devel" package, so they need both.
-AC_MSG_CHECKING(that Python has a working distutils)
+# Make sure sysconfig is available.  This is the modern replacement for distutils.sysconfig
+# which has been deprecated and removed in Python 3.12+.
+AC_MSG_CHECKING(that Python has a working sysconfig)
 changequote(,)
 cat > conftest.py <<EOF
 try:
-    import distutils.errors
-    import distutils.sysconfig
+    import sysconfig
 except ImportError:
     res = "no"
 else:
     try:
-        distutils.sysconfig.get_config_vars()
-    except distutils.errors.DistutilsPlatformError:
+        sysconfig.get_config_vars()
+    except Exception:
         res = "no"
     else:
-        # some RedHat packages put distutils in python, but the C headers
-        # are in python-devel so check for headers too.
+        # Check for Python headers too.
         import os.path
-        pdothpath = distutils.sysconfig.get_python_inc()
+        pdothpath = sysconfig.get_path("include")
         if os.path.isfile(os.path.join(pdothpath, "Python.h")):
             res = "yes"
         else:
@@ -245,19 +243,18 @@ fp.close()
 EOF
 changequote([, ])
 $PYTHON conftest.py
-havedistutils=`cat conftest.out`
+havesysconfig=`cat conftest.out`
 rm -f conftest.out conftest.py
-if test "$havedistutils" != "yes"
+if test "$havesysconfig" != "yes"
 then
     AC_MSG_ERROR([
 
-***** Distutils is not available or is incomplete for $PYTHON
-***** If you installed Python from RPM (or other package manager)
-***** be sure to install the -devel package, or install Python
-***** from source.  See sec. 15.1 of the Installation Manual for
-***** details])
+***** sysconfig is not available or is incomplete for $PYTHON
+***** Please ensure you have a complete Python installation with
+***** the standard library sysconfig module available.
+***** See sec. 15.1 of the Installation Manual for details])
 fi
-AC_MSG_RESULT($havedistutils)
+AC_MSG_RESULT($havesysconfig)
 
 # Checks for programs.
 AC_PROG_INSTALL
